Enhanced JUnit and Mockito test coverage for hotel booking application